# E-Commerce_Customer_Satisfaction_Score_Prediction_

./: E_Commerce_Customer_Satisfaction_Score_Prediction.ipynb  README.md  app.py  csat_model.keras  main.py  pyproject.toml  requirements.txt  scaler.pkl
